Changes in home section

--- a/src/app/home/categories/categories.component.html
+++ b/src/app/home/categories/categories.component.html
@@ -1,19 +1,19 @@
-<div class="container mt-5">
-  <div class="row no-gutters">
+
+  <div class="row no-gutters mt-5">
     <div class="col-3">
-      <img class="catImg" src="../../../assets/demo images/kyle-frederick-1042416-unsplash.jpg" alt="">
+      <img class="catImg" src="../../../assets/demo images/Image_1.png" alt="">
     </div>
     <div class="col-3">
-      <img  class="catImg"src="../../../assets/demo images/kyle-frederick-1042416-unsplash.jpg" alt="">
+      <img  class="catImg"src="../../../assets/demo images/Image_2.png" alt="">
     </div>
     <div class="col-3">
-      <img class="catImg" src="../../../assets/demo images/kyle-frederick-1042416-unsplash.jpg" alt="">
+      <img class="catImg" src="../../../assets/demo images/Image_3.png" alt="">
 
     </div>
     <div class="col-3">
-      <img class="catImg" src="../../../assets/demo images/kyle-frederick-1042416-unsplash.jpg" alt="">
+      <img class="catImg" src="../../../assets/demo images/Image_4.png" alt="">
     </div>
     
 
   </div>
-</div>
+
