--- a/src/app/home/home-articals/home-articals.component.html
+++ b/src/app/home/home-articals/home-articals.component.html
@@ -46,7 +46,7 @@
       <div class="row">
         <div class="col"> <hr></div>
         <div class="col-auto text-center "> 
-            <h6>Explor</h6>
+            <h6>Explore</h6>
         </div>
         <div class="col"><hr></div>
       </div>
@@ -59,24 +59,23 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-4 figure text-center">
+    <div class="col-4 text-center">
       <img class="ExplorIMG figure-img img-fluid rounded" src="../../../assets/demo jewellery images/jewelry-photo_072928275_205.jpg" alt="">
-      <figcaption class="figure-caption text-center mt-2"><h5>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, ipsa!</h5></figcaption>
+      <h5 class="mt-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, ipsa!</h5>
       <button class="btn btnP text-center mt-3">Read more</button>
     </div>
 
     <div class="col-4 figure text-center">
         <img class="ExplorIMG figure-img img-fluid rounded" src="../../../assets/demo jewellery images/jewelry-photo_072928275_205.jpg" alt="">
-        <figcaption class="figure-caption text-center mt-2"><h5>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, ipsa!</h5></figcaption>
+      <h5 class="mt-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, ipsa!</h5>
         <button class="btn btnP text-center mt-3">Read more</button>
 
     </div>
 
     <div class="col-4 figure text-center">
         <img class="ExplorIMG figure-img img-fluid rounded" src="../../../assets/demo jewellery images/jewelry-photo_072928275_205.jpg" alt="">
-        <figcaption class="figure-caption text-center mt-2"><h5>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, ipsa!</h5></figcaption>
+      <h5 class="mt-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, ipsa!</h5>
         <button class="btn btnP text-center mt-3">Read more</button>
-
     </div>    
   </div>
 </div>
