--- a/src/app/home/home-tags/home-tags.component.html
+++ b/src/app/home/home-tags/home-tags.component.html
@@ -5,7 +5,7 @@
         <div class="card">
             <img src="../../../assets/demo jewellery images/Beautiful-ring.jpg" class="card-img-top" alt="...">
             <div class="card-footer py-1 text-center bgColor">
-              <h5>#Style</h5>
+              <h6 class="mt-2">#Trending</h6>
             </div>
           </div>
     </div>
@@ -13,7 +13,7 @@
         <div class="card">
             <img src="../../../assets/demo jewellery images/Beautiful-ring.jpg" class="card-img-top" alt="...">
             <div class="card-footer py-1 text-center bgColor">
-              <h5>#Style</h5>
+              <h6 class="mt-2">#Trending</h6>
             </div>
           </div>
     </div>
@@ -21,7 +21,7 @@
         <div class="card">
             <img src="../../../assets/demo jewellery images/Beautiful-ring.jpg" class="card-img-top" alt="...">
             <div class="card-footer py-1 text-center bgColor">
-              <h5>#Style</h5>
+              <h6 class="mt-2">#Trending</h6>
             </div>
           </div>
     </div>
@@ -29,7 +29,7 @@
         <div class="card">
             <img src="../../../assets/demo jewellery images/Beautiful-ring.jpg" class="card-img-top" alt="...">
             <div class="card-footer py-1 text-center bgColor">
-              <h5>#Style</h5>
+              <h6 class="mt-2">#Trending</h6>
             </div>
           </div>
     </div>
@@ -37,7 +37,7 @@
         <div class="card">
             <img src="../../../assets/demo jewellery images/Beautiful-ring.jpg" class="card-img-top" alt="...">
             <div class="card-footer py-1 text-center  bgColor">
-              <h5>#Style</h5>
+              <h6 class="mt-2">#Trending</h6>
             </div>
           </div>
     </div>
@@ -45,7 +45,7 @@
         <div class="card">
             <img src="../../../assets/demo jewellery images/Beautiful-ring.jpg" class="card-img-top" alt="...">
             <div class="card-footer py-1 text-center bgColor">
-              <h5>#Style</h5>
+              <h6 class="mt-2">#Trending</h6>
             </div>
           </div>
     </div>
