--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ a{
 .bgColor{
     background-color: #edc7b7;
 }
-.bgColor1{
+header{
     background-color: #f4e8e3;
 }
 h1,h2,h3,h4,h5,h6,span,p{
