--- a/src/app/home/home-collections/home-collections.component.html
+++ b/src/app/home/home-collections/home-collections.component.html
@@ -3,7 +3,7 @@
 </div> -->
 <div class="container-fluid ">
   <!-- coverPic -->
-      <img class="img-fluid homeCover" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+      <img class="img-fluid homeCover" src="../../../assets/demo images/cover.jpg" alt="">
 </div>
 
 <!-- collections -->
@@ -27,15 +27,15 @@
     <div class="container mt-5">
         <div class="row">
           <div class="col-md-6 ">
-            <img class="collection img-fluid rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+            <img class="collection img-fluid rounded" src="../../../assets/demo images/Summerof69.png" alt="">
         
           </div>
           <div class="col-md-6">
             <div >
-                <img class="collection img-fluid rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+                <img class="collection img-fluid rounded" src="../../../assets/demo images/Collection1.png" alt="">
             </div>
             <div class="mt-3">
-            <img class="collection img-fluid rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+            <img class="collection img-fluid rounded" src="../../../assets/demo images/Collection2.png" alt="">
             </div>
           </div>
         </div>
@@ -61,29 +61,29 @@
 <div class="container">
   <div class="row">
     <div class="col-4 ">
-      <img class="collection img-fluid rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+      <img class="collection img-fluid rounded" src="../../../assets/demo images/Category_1.png" alt="">
   
     </div>
     <div class="col-3">
       <div >
-          <img class="collection img-fluid rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+          <img class="collection img-fluid rounded" src="../../../assets/demo images/Category_2.png" alt="">
       </div>
       <div class="mt-3">
-      <img class="collection img-fluid rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+      <img class="collection img-fluid rounded" src="../../../assets/demo images/Category_3.png" alt="">
       </div>
   
     </div>
     <div class="col-3">
       
         <div>
-            <img class="collection img-fluid rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+            <img class="collection img-fluid rounded" src="../../../assets/demo images/Category_4.png" alt="">
         </div>
         <div class="mt-3">
-        <img class="collection img-fluid rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+        <img class="collection img-fluid rounded" src="../../../assets/demo images/Category_5.png" alt="">
         </div>
     </div>
     <div class="col-2">
-      <img class="collection img-fluid rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
+      <img class="collection img-fluid rounded" src="../../../assets/demo images/Category_6.png" alt="">
       
     </div>
   </div>
@@ -110,10 +110,12 @@
   </div>
 
   <div class="container">
-    <div class="row justify-content-start">
+    <div class="row justify-content-start ">
       <div class="col-4 ">
-        <img class="promationImg rounded" src="../../../assets/demo images/brooke-cagle-52214-unsplash.jpg" alt="">
-
+        <img class="promationImg rounded" src="../../../assets/demo images/edit3.png" alt="">
+      </div>
+      <div class="col-3 border my-auto">
+        <h3>This is the design</h3>
       </div>
     </div>
     
